# 7CSOGL

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
shaders/: default.frag  default.vert  post.frag  post.vert
src/: abstract.cpp  buffers.cpp  main.cpp
